// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OuSAdresser /> should render a complex case 1`] = `
.c0 {
  padding: 2rem;
  margin-bottom: 1rem;
  background-color: #ebeff3;
  border-radius: 0.25rem;
}

.c1 {
  display: block;
  margin-bottom: 0.5rem;
}

<div>
  <div
    class="c0"
  >
    <strong
      class="c1"
    >
      Ou s'adresser ?
    </strong>
    <a
      href="url du lien"
      rel="noopener noreferrer"
      target="_blank"
    >
      Label du lien !
    </a>
  </div>
</div>
`;

exports[`<OuSAdresser /> should render a simple case 1`] = `
.c0 {
  padding: 2rem;
  margin-bottom: 1rem;
  background-color: #ebeff3;
  border-radius: 0.25rem;
}

.c1 {
  display: block;
  margin-bottom: 0.5rem;
}

<div>
  <div
    class="c0"
  >
    <strong
      class="c1"
    >
      Ou s'adresser ?
    </strong>
    <p>
      Un paragraphe tout bête
    </p>
  </div>
</div>
`;
